# hdx-scraper-operationalpresence

./: .pre-commit-config.yaml  CLAUDE.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-tests.yaml  run_script.yaml
src/hdx/scraper/operationalpresence/: __main__.py  date_processing.py  mappings.py  org.py  org_type.py  pipeline.py  row.py  sector.py  sheet.py
src/hdx/scraper/operationalpresence/config/: hdx_dataset_static.yaml  hdx_resource_view_static.yaml  project_configuration.yaml
tests/: test_date_processing.py  test_main.py
tests/fixtures/: hdx_hapi_operational_presence_global.csv  hdx_hapi_organisations_global.csv  operational_presence.csv  org_map.csv  organisations.csv
tests/fixtures/input/: 3w_august_2025.csv  3w_bdi_feb_2023.ods  3w_operational_presence_dataset_january_april_2025.xlsx  3w_tcd_avr2025.xlsx  burundi-operational-presence.json  chad-operational-presence.json  download-global-pcode-lengths.csv  download-global-pcodes-adm-1-2.csv  drc_presence_operationnelle.json  ethiopia-operational-presence.json  ethiopia_who_is_doing_what_where_4w_may_to_july_2025.csv  extrait_mai_2025.xlsx  global-coordination-groups-beta.json  lbn_sectorsreporting_bydistrict_20240902_hxlated.csv  lebanon-operational-presence.json  operational_presence_0.json  operational_presence_1.json  operational_presence_10.json  operational_presence_100.json  operational_presence_101.json  operational_presence_102.json  operational_presence_103.json  operational_presence_104.json  operational_presence_105.json  operational_presence_106.json  operational_presence_107.json  operational_presence_108.json  operational_presence_109.json  operational_presence_11.json  operational_presence_110.json  operational_presence_111.json  operational_presence_112.json  operational_presence_113.json  operational_presence_114.json  operational_presence_115.json  operational_presence_116.json  operational_presence_117.json  operational_presence_118.json  operational_presence_119.json  operational_presence_12.json  (+175 more)
