#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-operationalpresence"
requires-python = ">=3.13"
dependencies = [
  "frictionless[ods]",
  "gspread",
  "hdx-python-scraper>= 2.6.5",
  "hdx-python-api>= 6.5.4",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-operationalpresence"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pre-commit"]
